posiGen_FullsendBox/src/objects/Use_Case_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Screenshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Use Case Attachments</relationshipLabel>
        <relationshipName>Use_Case_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Use Case Attachment</label>
    <nameField>
        <label>Use Case Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Case Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>